<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:layout_centerHorizontal="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtName"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName" />

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txtAge"
        android:layout_below="@+id/editName" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:layout_below="@+id/txtAge"/>

    <TextView
        android:id="@+id/txtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtWeight"
        android:layout_toEndOf="@+id/editAge"
        android:layout_alignTop="@+id/txtAge"
        android:layout_marginStart="15dp" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:layout_below="@+id/txtWeight"
        android:layout_alignStart="@+id/txtWeight" />

    <TextView
        android:id="@+id/txtHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtHeight"
        android:layout_toEndOf="@+id/editWeight"
        android:layout_alignTop="@+id/txtAge"
        android:layout_marginStart="15dp" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:layout_below="@+id/txtHeight"
        android:layout_alignStart="@+id/txtHeight"/>

    <Button
        android:id="@+id/btnReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnReport"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editAge"
        android:layout_marginTop="70dp"
        android:onClick="showReport" />

</RelativeLayout>